Add the ability to share the eth1 node

--- a/default.env
+++ b/default.env
@@ -38,6 +38,12 @@ NIM_PORT=9000
 TEKU_PORT=9000
 # Local grafana dashboard port. Do not expose to Internet, it is insecure http
 GRAFANA_PORT=3000
+# ETH1 RPC port, important when using shared-eth1.yml
+ETH1_RPC_PORT=8545
+# ETH1 RPC CORS open to all. Insecure but allows for easy testing
+ETH1_RPC_CORS=all
+# ETH1 RPC CORS, here for Metamask extension - was not functional in testing
+#ETH1_RPC_CORS="chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn moz-extension://f3a66ea7-df4d-4731-80db-de45a4abebd6"
 
 # These variables are not likely to require adjustment
 
@@ -59,7 +65,7 @@ PRYSM_USER=prysm
 TEKU_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 TEKU_USER=teku
 
-NIM_BUILD_TARGET=devel
+NIM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 NIM_USER=nimbus
 
 DEPCLI_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
