--- a/geth.yml
+++ b/geth.yml
@@ -16,8 +16,7 @@ services:
       - ${ETH1_PORT}:${ETH1_PORT}/tcp
       - ${ETH1_PORT}:${ETH1_PORT}/udp
     expose:
-      - 8545
-      - 8546
+      - ${ETH1_RPC_PORT}/tcp
     entrypoint:
       - geth
       - --nousb
@@ -32,6 +31,8 @@ services:
       - /var/lib/goethereum
       - --port
       - ${ETH1_PORT}
+      - --rpcport
+      - ${ETH1_RPC_PORT}
     command: ${GETH1_NETWORK}
   beacon:
     depends_on:
