--- a/oe.yml
+++ b/oe.yml
@@ -16,7 +16,7 @@ services:
       - ${ETH1_PORT}:${ETH1_PORT}/tcp
       - ${ETH1_PORT}:${ETH1_PORT}/udp
     expose:
-      - 8545
+      - ${ETH1_RPC_PORT}/tcp
     entrypoint:
       - openethereum
       - --no-ws
@@ -26,9 +26,12 @@ services:
       - --jsonrpc-interface=all
       - --jsonrpc-apis=net,eth
       - --jsonrpc-hosts=all
+      - --jsonrpc-cors=${ETH1_RPC_CORS}
       - --chain=${ETH1_NETWORK}
       - --port
       - ${ETH1_PORT}
+      - --jsonrpc-port
+      - ${ETH1_RPC_PORT}
   beacon:
     depends_on:
       - eth1
