updating default.env from .env
adding nethermind as eth1

Update PREREQUISITES.md

adding dotnet for nethermind

Update PREREQUISITES.md

fix dotnet version

cleaning up yml file for nethermind

adding nethermind user

cleaning and variabilization

updating README.md with nethermind

--- a/default.env
+++ b/default.env
@@ -25,7 +25,7 @@ NETWORK=medalla
 # Network to use for eth1. If using OpenEthereum and main net, set to ethereum.
 ETH1_NETWORK=goerli
 # If using Geth as the eth1 node and main net, comment out.
-GETH1_NETWORK=--goerli
+# GETH1_NETWORK=--goerli
  
 
 # Ports you will forward to your staking node. Adjust here if you are
@@ -45,6 +45,7 @@ ETH1_RPC_CORS=all
 # ETH1 RPC CORS, here for Metamask extension - was not functional in testing
 #ETH1_RPC_CORS="chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn moz-extension://f3a66ea7-df4d-4731-80db-de45a4abebd6"
 
+
 # These variables are not likely to require adjustment
 
 GETH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
@@ -55,12 +56,14 @@ OE_BUILD_TARGET=dev
 #OE_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 OE_USER=openethereum
 
+NM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NM_USER=nethermind
+
 LH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 LH_USER=lighthouse
 
 PRYSM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 PRYSM_USER=prysm
-
 
 TEKU_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 TEKU_USER=teku
