removing useless package fixing typo

--- a/default.env
+++ b/default.env
@@ -25,7 +25,7 @@ NETWORK=medalla
 # Network to use for eth1. If using OpenEthereum and main net, set to ethereum.
 ETH1_NETWORK=goerli
 # If using Geth as the eth1 node and main net, comment out.
-# GETH1_NETWORK=--goerli
+GETH1_NETWORK=--goerli
  
 
 # Ports you will forward to your staking node. Adjust here if you are
