updating Dockerfile with git latest tag and executables copy variabilization of json rpc port in nm.yml

--- a/nm.yml
+++ b/nm.yml
@@ -33,7 +33,7 @@ services:
       - --JsonRpc.Host
       - 0.0.0.0
       - --JsonRpc.Port
-      - "8645"
+      - ${ETH1_RPC_PORT}
       - --Sync.FastSync
       - "true"
   beacon:
