--- a/nethermind/Dockerfile
+++ b/nethermind/Dockerfile
@@ -3,10 +3,13 @@ FROM ubuntu:18.04 AS clone
 
 WORKDIR /src
 
-RUN apt-get update -y && apt-get install -y git && \ 
-    git clone https://github.com/NethermindEth/nethermind && \
-    cd nethermind && git -c submodule."src/tests".update=none submodule update --init
-    
+RUN apt-get update -y && apt-get install -y git
+RUN git clone https://github.com/NethermindEth/nethermind
+# custom in order to get latest tag
+RUN git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET}
+# end of custom
+RUN cd nethermind && git -c submodule."src/tests".update=none submodule update --init
+
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS builder
 
 COPY --from=clone /src .
@@ -20,6 +23,8 @@ RUN apt-get update -y && apt-get install -y libsnappy-dev libc6-dev libc6 unzip
 
 COPY --from=builder /nethermind/src/Nethermind/Nethermind.Runner/out .
 
+# This is no longer from NM github
+
 ARG ETH1_NETWORK
 
 ENV ASPNETCORE_ENVIRONMENT docker
@@ -27,21 +32,13 @@ ENV NETHERMIND_CONFIG "${ETH1_NETWORK}"
 ENV NETHERMIND_DETACHED_MODE true
 ENV NETHERMIND_URL http://*:8645
 
-ARG GIT_COMMIT=unspecified
-LABEL git_commit=$GIT_COMMIT
-
-
-# This is no longer from NM github
-
 ARG BUILD_TARGET
 ARG USER
 ARG UID
 
-
 RUN adduser \
     --disabled-password \
     --gecos "" \
-   # --home "/nonexistent" \
     --shell "/sbin/nologin" \
     --no-create-home \
     --uid "${UID}" \
@@ -54,6 +51,8 @@ RUN mkdir /logs && chown ${USER}:${USER} /logs
 RUN mkdir /keystore && chown ${USER}:${USER} /keystore
 RUN mkdir /Nethermind && chown -R ${USER}:${USER} /Nethermind
 RUN mkdir /nethermind_db && chown -R ${USER}:${USER} /nethermind_db
+
+COPY --from=builder /nethermind/src/Nethermind/Nethermind.Runner/out /usr/local/bin/
 
 # Use an unprivileged user.
 USER ${USER}:${USER}
