--- a/default.env
+++ b/default.env
@@ -48,29 +48,41 @@ ETH1_RPC_CORS=all
 
 # These variables are not likely to require adjustment
 
-GETH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+GETH_DOCKER_TAG=stable
 GETH_USER=geth
 
-# Build target dev until #74 has been pulled into main. At that point, switch to release tracking
-OE_BUILD_TARGET=dev
+# Build target dev/nightly until #74 has been pulled into main. At that point, switch to release tracking
+OE_SRC_BUILD_TARGET=dev
 #OE_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+OE_DOCKER_TAG=nightly
+#OE_DOCKER_TAG=latest
+#Used only for source build; binary build defaults to this
 OE_USER=openethereum
 
 NM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 NM_USER=nethermind
 
-LH_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+LH_DOCKER_TAG=v0.3.4 # eventually stable or stable-latest when sigp introduce that
 LH_USER=lighthouse
 
-PRYSM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+PRYSM_DOCKER_TAG=stable
+# Change to Dockerfile.sourcebuild to build from source
+PRYSM_DOCKERFILE=Dockerfile.bin
 PRYSM_USER=prysm
 
-TEKU_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_DOCKER_TAG=latest
 TEKU_USER=teku
 
-NIM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NIM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NIM_DOCKER_TAG=devel # eventually stable or stable-latest with status introduce that
 NIM_USER=nimbus
 
-DEPCLI_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+# Does not (yet?) exist on Docker hub
+DEPCLI_DOCKER_TAG=nonesuch
 DEPCLI_USER=depcli
 DEPCLI_LOCALDIR=./.eth2
