--- a/lh-base.yml
+++ b/lh-base.yml
@@ -6,9 +6,10 @@ services:
     build:
       context: ./lighthouse
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
+        - SRC_BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - USER=${LH_USER}
         - UID=${LOCAL_UID}
+        - DOCKER_TAG=${LH_DOCKER_TAG}
     image: lighthouse
     volumes:
       - lhbeacon-data:/var/lib/lighthouse
@@ -38,9 +39,10 @@ services:
     build:
       context: ./lighthouse
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
+        - SRC_BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - USER=${LH_USER}
         - UID=${LOCAL_UID}
+        - DOCKER_TAG=${LH_DOCKER_TAG}
     image: lighthouse
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
@@ -65,9 +67,10 @@ services:
     build:
       context: ./lighthouse
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
+        - SRC_BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - USER=${LH_USER}
         - UID=${LOCAL_UID}
+        - DOCKER_TAG=${LH_DOCKER_TAG}
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/var/lib/lighthouse/validator_keys
@@ -91,9 +94,10 @@ services:
     build:
       context: ./lighthouse
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
+        - SRC_BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - USER=${LH_USER}
         - UID=${LOCAL_UID}
+        - DOCKER_TAG=${LH_DOCKER_TAG}
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}/validator_keys:/var/lib/lighthouse/validator_keys
@@ -119,9 +123,10 @@ services:
     build:
       context: ./lighthouse
       args:
-        - BUILD_TARGET=${LH_BUILD_TARGET}
+        - SRC_BUILD_TARGET=${LH_SRC_BUILD_TARGET}
         - USER=${LH_USER}
         - UID=${LOCAL_UID}
+        - DOCKER_TAG=${LH_DOCKER_TAG}
     volumes:
       - lhvalidator-data:/var/lib/lighthouse
       - ${DEPCLI_LOCALDIR}:/interchange
@@ -140,7 +145,7 @@ services:
     build:
       context: ./eth2.0-deposit-cli
       args:
-        - BUILD_TARGET=${DEPCLI_BUILD_TARGET}
+        - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET}
         - USER=${DEPCLI_USER}
         - UID=${LOCAL_UID}
     image: eth2.0-deposit-cli
@@ -162,7 +167,7 @@ services:
     build:
       context: ./eth2.0-deposit-cli
       args:
-        - BUILD_TARGET=${DEPCLI_BUILD_TARGET}
+        - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET}
         - USER=${DEPCLI_USER}
         - UID=${LOCAL_UID}
     image: eth2.0-deposit-cli
