--- a/default.env
+++ b/default.env
@@ -50,6 +50,8 @@ ETH1_RPC_CORS=all
 
 GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 GETH_DOCKER_TAG=stable
+# Change to Dockerfile.source to build from source
+GETH_DOCKERFILE=Dockerfile.binary
 GETH_USER=geth
 
 # Build target dev/nightly until #74 has been pulled into main. At that point, switch to release tracking
@@ -57,6 +59,8 @@ OE_SRC_BUILD_TARGET=dev
 #OE_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 OE_DOCKER_TAG=nightly
 #OE_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+OE_DOCKERFILE=Dockerfile.binary
 #Used only for source build; binary build defaults to this
 OE_USER=openethereum
 
@@ -65,12 +69,14 @@ NM_USER=nethermind
 
 LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 LH_DOCKER_TAG=v0.3.4 # eventually stable or stable-latest when sigp introduce that
+# Change to Dockerfile.source to build from source
+LH_DOCKERFILE=Dockerfile.binary
 LH_USER=lighthouse
 
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-PRYSM_DOCKER_TAG=stable
-# Change to Dockerfile.sourcebuild to build from source
-PRYSM_DOCKERFILE=Dockerfile.bin
+PRYSM_DOCKER_TAG=v1.0.0-beta.3 # Change to stable on Wednesday the 18th of Nov 2020
+# Change to Dockerfile.source to build from source
+PRYSM_DOCKERFILE=Dockerfile.binary
 PRYSM_USER=prysm
 
 TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
