More binary options, added ws

--- a/default.env
+++ b/default.env
@@ -2,7 +2,7 @@
 # This is vital for key import to work. You can find your UID with "echo $UID".
 LOCAL_UID=1000
 # Client choice: See SETUP.md for available options
-COMPOSE_FILE=lh-base.yml:oe.yml:lh-grafana.yml
+COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container
 ETH1_NODE=http://eth1:8545
 # Graffiti to use for validator, in order to receive POAP
@@ -21,8 +21,8 @@ LOG_LEVEL=info
 # Change to empty (nothing after first =) to disable that functionality
 NIM_METRICS=NIMFLAGS="-d:insecure"
 # Network to use for eth2. If using main net, set to mainnet.
-NETWORK=medalla
-# Network to use for eth1. If using OpenEthereum and main net, set to ethereum.
+NETWORK=pyrmont
+# Network to use for eth1. If using OpenEthereum and main net, set to ethereum. For Nethermind and main net, set to mainnet. Not in use for Geth.
 ETH1_NETWORK=goerli
 # If using Geth as the eth1 node and main net, comment out.
 GETH1_NETWORK=--goerli
@@ -40,6 +40,8 @@ TEKU_PORT=9000
 GRAFANA_PORT=3000
 # ETH1 RPC port, important when using shared-eth1.yml
 ETH1_RPC_PORT=8545
+# ETH1 WS port, used with Nimbus
+ETH1_WS_PORT=8546
 # ETH1 RPC CORS open to all. Insecure but allows for easy testing
 ETH1_RPC_CORS=all
 # ETH1 RPC CORS, here for Metamask extension - was not functional in testing
@@ -64,7 +66,10 @@ OE_DOCKERFILE=Dockerfile.binary
 #Used only for source build; binary build defaults to this
 OE_USER=openethereum
 
-NM_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NM_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+NM_DOCKERFILE=Dockerfile.binary
 NM_USER=nethermind
 
 LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
@@ -74,17 +79,22 @@ LH_DOCKERFILE=Dockerfile.binary
 LH_USER=lighthouse
 
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-PRYSM_DOCKER_TAG=v1.0.0-beta.3 # Change to stable on Wednesday the 18th of Nov 2020
+PRYSM_DOCKER_TAG=stable
 # Change to Dockerfile.source to build from source
 PRYSM_DOCKERFILE=Dockerfile.binary
 PRYSM_USER=prysm
 
 TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 TEKU_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+TEKU_DOCKERFILE=Dockerfile.binary
+#Used only for source build; binary build defaults to this
 TEKU_USER=teku
 
 NIM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-NIM_DOCKER_TAG=devel # eventually stable or stable-latest with status introduce that
+NIM_DOCKER_TAG=devel # eventually stable or stable-latest when statusteam introduce that
+# Change to Dockerfile.source to build from source, or Dockerfile.binary to test binary build
+NIM_DOCKERFILE=Dockerfile.source
 NIM_USER=nimbus
 
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
