--- a/lighthouse/Dockerfile.binary
+++ b/lighthouse/Dockerfile.binary
@@ -2,7 +2,9 @@ ARG DOCKER_TAG
 
 FROM sigp/lighthouse:${DOCKER_TAG}
 
-ARG BUILD_TARGET # Unused, this is here to avoid build time complaints
+# Unused, this is here to avoid build time complaints
+ARG BUILD_TARGET
+
 ARG USER
 ARG UID
 
