--- a/oe.yml
+++ b/oe.yml
@@ -19,9 +19,9 @@ services:
       - ${ETH1_PORT}:${ETH1_PORT}/udp
     expose:
       - ${ETH1_RPC_PORT}/tcp
+      - ${ETH1_WS_PORT}/tcp
     entrypoint:
       - openethereum
-      - --no-ws
       - --no-ipc
       - --no-secretstore
       - --base-path=/var/lib/openethereum
@@ -29,6 +29,11 @@ services:
       - --jsonrpc-apis=net,eth
       - --jsonrpc-hosts=all
       - --jsonrpc-cors=${ETH1_RPC_CORS}
+      - --ws-interface=all
+      - --ws-apis=net,eth
+      - --ws-hosts=all
+      - --ws-origins=all
+      - --ws-port=${ETH1_WS_PORT}
       - --chain=${ETH1_NETWORK}
       - --port
       - ${ETH1_PORT}
