--- a/openethereum/Dockerfile.binary
+++ b/openethereum/Dockerfile.binary
@@ -16,7 +16,7 @@ RUN apk --no-cache add shadow && usermod -u "${UID}" openethereum
 RUN cp /home/openethereum/openethereum /usr/local/bin
 
 # Create data mount point with permissions
-RUN mkdir -p /var/lib/openethereum && chown ${USER}:${USER} /var/lib/openethereum && chmod 700 /var/lib/openethereum
+RUN mkdir -p /var/lib/openethereum && chown openethereum:openethereum /var/lib/openethereum && chmod 700 /var/lib/openethereum
 
 # Use an unprivileged user.
 USER openethereum
