--- a/openethereum/Dockerfile.source
+++ b/openethereum/Dockerfile.source
@@ -1,5 +1,8 @@
 FROM alpine:edge AS builder
 
+# Unused, this is here to avoid build time complaints
+ARG DOCKER_TAG
+
 # show backtraces
 ENV RUST_BACKTRACE 1
 
