--- a/default.env
+++ b/default.env
@@ -48,7 +48,16 @@ ETH1_RPC_CORS=all
 #ETH1_RPC_CORS="chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn moz-extension://f3a66ea7-df4d-4731-80db-de45a4abebd6"
 
 
-# These variables are not likely to require adjustment
+# You can set specific version targets and choose
+# binary or source builds below. 
+# Doing so is entirely optional, and arguably advanced
+# use.
+
+LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+LH_DOCKER_TAG=v0.3.4 # eventually stable or stable-latest when sigp introduce that
+# Change to Dockerfile.source to build from source
+LH_DOCKERFILE=Dockerfile.binary
+LH_USER=lighthouse
 
 GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 GETH_DOCKER_TAG=stable
@@ -72,19 +81,15 @@ NM_DOCKER_TAG=latest
 NM_DOCKERFILE=Dockerfile.binary
 NM_USER=nethermind
 
-LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-LH_DOCKER_TAG=v0.3.4 # eventually stable or stable-latest when sigp introduce that
-# Change to Dockerfile.source to build from source
-LH_DOCKERFILE=Dockerfile.binary
-LH_USER=lighthouse
-
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 PRYSM_DOCKER_TAG=stable
 # Change to Dockerfile.source to build from source
 PRYSM_DOCKERFILE=Dockerfile.binary
 PRYSM_USER=prysm
 
-TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+# Recent build failure when following release tag. Switch back to release tag when that has been resolved by Teku team
+TEKU_SRC_BUILD_TARGET=master
+#TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 TEKU_DOCKER_TAG=latest
 # Change to Dockerfile.source to build from source
 TEKU_DOCKERFILE=Dockerfile.binary
