Documented reason that Nimbus binary option does not work

--- a/default.env
+++ b/default.env
@@ -98,7 +98,9 @@ TEKU_USER=teku
 
 NIM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 NIM_DOCKER_TAG=devel # eventually stable or stable-latest when statusteam introduce that
-# Change to Dockerfile.source to build from source, or Dockerfile.binary to test binary build
+# Binary images at docker hub are not for public consumption and won't run. They'd need
+# to be built with NIMFLAGS="-d:disableMarchNative" to work. This can become binary
+# once statusteam create docker images meant for public use.
 NIM_DOCKERFILE=Dockerfile.source
 NIM_USER=nimbus
 
