--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -1,7 +1,7 @@
 # Build Lighthouse in a stock Rust build container
 FROM rust:latest as builder
 
-ARG SRC_BUILD_TARGET
+ARG BUILD_TARGET
 
 RUN apt-get update && apt-get install -y git gcc g++ make cmake pkg-config libssl-dev
 
@@ -22,12 +22,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
-
-# Grab dockerize so beacon can wait for geth
-#ENV DOCKERIZE_VERSION v0.6.1
-#RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-#    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
-#    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -51,6 +45,4 @@ USER ${USER}:${USER}
 # For voluntary exit
 ENV KEYSTORE=nonesuch
 
-#EXPOSE 5052 9000 9000/udp
-ENTRYPOINT ["lighthouse", "bn", "--datadir", "/var/lib/lighthouse/", "--http", "--http-address", "0.0.0.0"]
-CMD ["--testnet", "medalla", "--eth1-endpoint", "http://geth:8545"]
+ENTRYPOINT lighthouse
