--- a/eth1-standalone.yml
+++ b/eth1-standalone.yml
@@ -4,6 +4,7 @@ services:
   eth1:
     ports:
       - ${ETH1_RPC_PORT}:${ETH1_RPC_PORT}/tcp
+      - ${ETH1_WS_PORT}:$(ETH1_WS_PORT}/tcp
   eth2:
     image: tianon/true
   beacon:
