--- a/default.env
+++ b/default.env
@@ -54,7 +54,8 @@ ETH1_RPC_CORS=all
 # use.
 
 LH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-LH_DOCKER_TAG=v0.3.5 # eventually stable or stable-latest when sigp introduce that
+# Docker tag will eventually be stable or stable-latest when sigp introduce that
+LH_DOCKER_TAG=v0.3.5
 # Change to Dockerfile.source to build from source
 LH_DOCKERFILE=Dockerfile.binary
 LH_USER=lighthouse
@@ -97,7 +98,8 @@ TEKU_DOCKERFILE=Dockerfile.binary
 TEKU_USER=teku
 
 NIM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-NIM_DOCKER_TAG=devel # eventually stable or stable-latest when statusteam introduce that
+# Docker tag will eventually be stable or stable-latest when statusteam introduce that
+NIM_DOCKER_TAG=devel
 # Binary images at docker hub are not for public consumption and won't run. They'd need
 # to be built with NIMFLAGS="-d:disableMarchNative" to work. This can become binary
 # once statusteam create docker images meant for public use.
