--- a/default.env
+++ b/default.env
@@ -83,7 +83,7 @@ NM_DOCKERFILE=Dockerfile.binary
 NM_USER=nethermind
 
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-PRYSM_DOCKER_TAG=stable
+PRYSM_DOCKER_TAG=v1.0.0-beta.3
 # Change to Dockerfile.source to build from source
 PRYSM_DOCKERFILE=Dockerfile.binary
 PRYSM_USER=prysm
