--- a/teku-grafana.yml
+++ b/teku-grafana.yml
@@ -31,7 +31,9 @@ services:
       - 9100/tcp
   grafana:
     restart: "${RESTART}"
-    image: grafana/grafana
+    build:
+      context: ./grafana
+    image: grafana
     volumes:
       - grafana-data:/var/lib/grafana
     depends_on:
