added teku and nimbus

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -31,6 +31,16 @@ ARG lighthouse_summary_url='https://raw.githubusercontent.com/sigp/lighthouse-me
 ARG lighthouse_summary_file='/etc/grafana/provisioning/dashboards/lighthouse_summary.json'
 RUN wget -qcO - $lighthouse_summary_url | jq '.title = "lighthouse_summary"' >$lighthouse_summary_file
 
+#  teku_overview
+ARG teku_overview_url='https://grafana.com/api/dashboards/12199/revisions/1/download'
+ARG teku_overview_file='/etc/grafana/provisioning/dashboards/teku_overview.json'
+RUN wget -qcO - $teku_overview_url | jq '.title = "teku_overview"' >$teku_overview_file
+
+#  nimbus_dashboard
+ARG nimbus_dashboard_url='https://raw.githubusercontent.com/status-im/nimbus-eth2/master/grafana/beacon_nodes_Grafana_dashboard.json'
+ARG nimbus_dashboard_file='/etc/grafana/provisioning/dashboards/nimbus_dashboard.json'
+RUN wget -qcO - $nimbus_dashboard_url | jq '.title = "nimbus_dashboard"' >$nimbus_dashboard_file
+
 RUN tree /etc/grafana/provisioning/
 
 ENTRYPOINT [ "/run.sh" ]
