Nethermind barrier support

--- a/default.env
+++ b/default.env
@@ -22,7 +22,7 @@ LOG_LEVEL=info
 NIM_METRICS=NIMFLAGS="-d:insecure"
 # Network to use for eth2. If using main net, set to mainnet.
 NETWORK=pyrmont
-# Network to use for eth1. If using OpenEthereum and main net, set to ethereum. For Nethermind and main net, set to mainnet. Not in use for Geth.
+# Network to use for eth1. If using main net, set to mainnet. Not in use for Geth.
 ETH1_NETWORK=goerli
 # If using Geth as the eth1 node and main net, comment out.
 GETH1_NETWORK=--goerli
@@ -42,11 +42,18 @@ GRAFANA_PORT=3000
 ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus
 ETH1_WS_PORT=8546
-# ETH1 RPC CORS open to all. Insecure but allows for easy testing
+# ETH1 RPC CORS open to all. Insecure but allows for easy testing. May also be required on v6-native networks.
 ETH1_RPC_CORS=all
 # ETH1 RPC CORS, here for Metamask extension - was not functional in testing
-#ETH1_RPC_CORS="chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn moz-extension://f3a66ea7-df4d-4731-80db-de45a4abebd6"
+#ETH1_RPC_CORS="chrome-extension://* moz-extension://* 10.* 192.168.* 172.16.* 172.17.* 172.18.* 172.19.* 172.20.* 172.21.* 172.22.* 172.23.* 172.24.* 172.25.* 172.26.* 172.27.* 172.28.* 172.29.* 172.30.* 172.31.* 127.0.0.*"
 
+# Ancient barrier for ETH1, bodies and receipts before this block won't be
+# downloaded. For Nethermind currently. Setting this to mainnet value
+# greatly reduces required disk space on mainnet.
+# Goerli / Pyrmont value
+ETH1_ANCIENT_BARRIER=3740000
+# Mainnet value
+#ETH1_ANCIENT_BARRIER=11209000
 
 # You can set specific version targets and choose
 # binary or source builds below. 
