--- a/geth.yml
+++ b/geth.yml
@@ -19,6 +19,7 @@ services:
       - ${ETH1_PORT}:${ETH1_PORT}/udp
     expose:
       - ${ETH1_RPC_PORT}/tcp
+      - ${ETH1_WS_PORT}/tcp
     entrypoint:
       - geth
       - --nousb
