--- a/default.env
+++ b/default.env
@@ -89,19 +89,24 @@ NM_DOCKER_TAG=latest
 NM_DOCKERFILE=Dockerfile.binary
 NM_USER=nethermind
 
+BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+BESU_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+BESU_DOCKERFILE=Dockerfile.binary
+# Used only for source build; binary build defaults to this
+BESU_USER=besu
+
 PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 PRYSM_DOCKER_TAG=v1.0.0-beta.3
 # Change to Dockerfile.source to build from source
 PRYSM_DOCKERFILE=Dockerfile.binary
 PRYSM_USER=prysm
 
-# Recent build failure when following release tag. Switch back to release tag when that has been resolved by Teku team
-TEKU_SRC_BUILD_TARGET=master
-#TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 TEKU_DOCKER_TAG=latest
 # Change to Dockerfile.source to build from source
 TEKU_DOCKERFILE=Dockerfile.binary
-#Used only for source build; binary build defaults to this
+# Used only for source build; binary build defaults to this
 TEKU_USER=teku
 
 NIM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
