--- a/nm.yml
+++ b/nm.yml
@@ -18,7 +18,8 @@ services:
       - ${ETH1_PORT}:${ETH1_PORT}/tcp
       - ${ETH1_PORT}:${ETH1_PORT}/udp
     expose:
-      - ${ETH1_RPC_PORT}
+      - ${ETH1_RPC_PORT}/tcp
+      - ${ETH1_WS_PORT}/tcp
     entrypoint:
       - dotnet
       - /nethermind/Nethermind.Runner.dll
