Open cors for geth

--- a/geth.yml
+++ b/geth.yml
@@ -27,6 +27,7 @@ services:
       - --http.addr
       - 0.0.0.0
       - --http.vhosts=*
+      - --http.corsdomain=*
       - --http.api
       - eth,net
       - --ipcdisable
